header on index

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
     <title>CO Gov Tracker</title>
   </head>
   <body>
+    <h1> hello everyone </h1>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
